--- a/gb/25/10/2/n14607342.md
+++ b/gb/25/10/2/n14607342.md
@@ -9,42 +9,43 @@
 <p>今年共计节目类889件作品参赛，角逐节目类21个奖项。除了得奖名单揭晓是重头戏之外，适逢金钟60，节目类舞台也特别规划三大单元，带领观众一同笑中带泪、重温经典。</p>
 <p>第一段“大娱乐家”，由主持人 Lulu黄路梓茵以歌舞开场，用第一人称唱出综艺节目陪伴大家的岁月，并以舞台剧式的演出重现《五灯奖》《连环泡》《超级星期天》《综艺万花筒》到《康熙来了》等经典时刻。</p>
 <p>更惊喜的是，当年曾带来无数笑声的综艺人物也将再度聚首，包括“槟榔姊妹花”曹兰、姚黛玮，《红白胜利》的董月花（董至成），以及“欢喜玉玲珑”福州伯（许效舜），都将重返金钟舞台，带来满满笑料与回忆杀。</p>
-<figure id="attachment_14607368" aria-describedby="caption-attachment-14607368" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/10/id14607368-2510020414421487.jpg"><img decoding="async" class="size-large wp-image-14607368" title="" src="https://i.epochtimes.com/assets/uploads/2025/10/id14607368-2510020414421487-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14607368" class="wp-caption-text">《第60届节目类金钟奖》公开节目内容，当年综艺人物“槟榔姊妹花”也将聚首重现。（三立电视提供）</figcaption></figure>
+<figure id="attachment_14607368" aria-describedby="caption-attachment-14607368" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/10/id14607368-2510020414421487.jpg" rel="nofollow"><img decoding="async" class="size-large wp-image-14607368" title="" src="https://i.epochtimes.com/assets/uploads/2025/10/id14607368-2510020414421487-600x400.jpg" alt="" width="600" b="400"></a><figcaption id="caption-attachment-14607368" class="wp-caption-text">《第60届节目类金钟奖》公开节目内容，当年综艺人物“槟榔姊妹花”也将聚首重现。（三立电视提供）</figcaption></figure>
 <p>第二段表演节目“多元的土壤开出丰盛的花”，舞台则化身多元文化大熔炉，邀请4组音乐人轮番登场。</p>
 <p>原住民音乐代表雅维．茉芮，以浑厚歌声唱出文化深情；客语音乐才子谢宇威，带来浓厚在地风情；台语新声陈孟贤，用爵士风嗓音唱出新世代的热情；再加上金曲奖最佳乐团奖的TRASH，带来演出点燃舞台。4组音乐人用原住民、客、台、华语四种语言同台飙唱，展现台湾音乐最独特、最丰富的魅力。</p>
 <p>最后登场的是跨世代限定合作舞台“唱，从电视开始”，由 罗时丰、千田爱纱、黄伟晋、GENBLUE幻蓝小熊及ARKis联手演出。</p>
-<figure id="attachment_14607380" aria-describedby="caption-attachment-14607380" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/10/id14607380-2510020442391487.jpg"><img decoding="async" class="size-large wp-image-14607380" title="" src="https://i.epochtimes.com/assets/uploads/2025/10/id14607380-2510020442391487-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14607380" class="wp-caption-text">罗时丰（中）、千田爱纱（右）、黄伟晋将出席《第60届节目类金钟奖》带来合作舞台。（三立电视／大纪元合成）</figcaption></figure>
+<figure id="attachment_14607380" aria-describedby="caption-attachment-14607380" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/10/id14607380-2510020442391487.jpg" rel="nofollow"><img decoding="async" class="size-large wp-image-14607380" title="" src="https://i.epochtimes.com/assets/uploads/2025/10/id14607380-2510020442391487-600x400.jpg" alt="" width="600" b="400"></a><figcaption id="caption-attachment-14607380" class="wp-caption-text">罗时丰（中）、千田爱纱（右）、黄伟晋将出席《第60届节目类金钟奖》带来合作舞台。（三立电视／大纪元合成）</figcaption></figure>
 <p>这次特别网罗从电视节目出道的歌手与演员，组成前所未见的全新组合，用歌声和舞台魅力勾起观众满满回忆，也创造全新的惊喜火花，展现台湾电视一路以来孕育无数音乐与表演人才的传承力量。</p>
 <p>三大段表演，从经典综艺到多元音乐，再到跨世代的全新组合，金钟60将以最具娱乐感的舞台，陪伴观众一同欢笑、感动，见证属于台湾电视的荣耀时刻。</p>
 <p>“第60届金钟奖”包括“广播金钟奖”、“节目类金钟奖”、“戏剧类金钟奖”三场典礼，均于台北流行音乐中心举行，10月11日为“广播金钟奖颁奖典礼”，10月17日“节目类金钟奖颁奖典礼”，10月18日则是“戏剧类金钟奖颁奖典礼”，三场典礼皆由三立电视台负责制播。</p>
 <p>责任编辑：刘宇涵</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/4/n14587693.md#1">60届广播金钟奖入围揭晓 教育广播电台19项领跑</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/23/n14600768.md#1">Lulu为宣传新专辑 毛遂自荐演《戏说台湾》</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/29/n14604959.md#1">第60届广播金钟奖公布阵容 节目亮点一次看</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/1/n14606457.md#1">Lulu将发台语专辑 与制作人谢铭祐合作喊圆梦</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/4/13/n14481653.md#1">湖北维权人士案件庭审 莫名被增加两项罪名</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/14/n14531122.md#1">要求调查办假案法官 访民被抓 亲属遭株连</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/31/n14584722.md#1">湖北访民夫妻被以虚构罪名判入狱 生命垂危</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/22/n14621384.md#1">湖北访民尹登珍狱中病情恶化 家属吁紧急救援</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/20/2/7/n11852128.md#1">《刘伯温碑记》点明避开瘟疫的真言</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/9/12/n9623688.md#1" target="_blank">比利时母亲30年车祸创痛 读转法轮4个月消失</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/10/7/14/n2965989.md#1" target="_blank">鲜为人知的马克思之三：虚荣的马克思</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/26/n11412078.md#1" target="_blank">胡平：未来道德重建 法轮功将发挥更大作用</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/23/n10659446.md#1">节气“处暑”是什么意思？ 处暑出伏中元添福！</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4592934.md#1">潜龙隐迹辽东郡 名士风流厉冰雪</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/23/n14579766.md#1">【未解之谜】考古还是盗墓？开挖皇陵 诡异事件频现</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/8/n14569774.md#1">【古道人生】女子忍辱负重为夫家保后代</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/21/n14578146.md#1">一片叶落，是风的无情或树的无心还是叶子本身的无意?</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/25/n14580914.md#1">【新闻大破解】俄乌和谈五方博弈 联动台海</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/4/5/n13697943.md#1">【神韵原创音乐】2019 神韵交响乐《传神》</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/23/n14579508.md#1">亿万富翁不把钱存储蓄账户 他们放在哪里</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/23/n14579820.md#1">波音空客潜在订单泄漏商飞C919何种困境</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/23/n14579804.md#1">在Costco买这六种商品 为何你或感到后悔</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/22/n14579291.md#1">成本超3000万 郭富城主演新片首日票房仅5万</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/23/n14579822.md#1">杨洋凭武打戏再翻红 自曝严重腿伤需终生复健</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/23/n14579431.md#1">犬青被评论“颜值忽高忽低” 云安急召歌迷喊话</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/23/n14579795.md#1">【漂流传奇】李尚正：从星爷配角到台柱主持</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/23/n14579837.md#1">遗书爆陆综平台分帐黑幕 28岁导演轻生未遂</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/24/n14579978.md#1">为什么有些衣服洗了会缩水？ 如何挽救？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/19/n14555466.md#1">【梁厨美食】清蒸大红石斑～蒸鱼技巧学起来！</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/25/n14580580.md#1">为何你度假时应该把一枚硬币放在冰箱里？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/11/n14571447.md#1">劝年长者放弃开车? 劝说要有技巧</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/20/n14577575.md#1">生前赠与：提早帮助继承人 避免财产纠纷 实现双赢</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647568.md#1">执子之手 不离不弃 一对美国夫妻的爱情传奇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645924.md#1">王九龄的《题旅店》：半梦半醒思乡国</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651306.md#1">【军事情报局】普京拒绝和平 乌军还在红军村</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651372.md#1">【直播】NASA太空人告别太空站并关闭舱门</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651278.md#1">【新闻大家谈】美国家安全战略 把台湾推向高处</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638627.md#1">中产阶级想成为富人 需避免五大消费习惯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650329.md#1">十年来首次降价 五粮液开票价每瓶下调119元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650097.md#1">花滑大奖赛总决赛 华裔天才少女一举夺冠</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650176.md#1">为捧儿子向佐亏数亿 向华强：上天给我的教训</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650354.md#1">Netflix若收购华纳兄弟 将拥有9个系列影视</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650211.md#1">《阿凡达3》香港撤档 片名后缀因敏感字遭删</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649691.md#1">《阿凡达3》官宣中文配音 豪华阵容引期待</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14649781.md#1">陈梦晒与黄晓明合照 已签约表哥公司成为艺人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14649845.md#1">研究人员找到让你吃泡菜的另一个理由</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650330.md#1">为什么飞机客舱的窗户是圆形的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/1/n14646629.md#1">厨房锅具摆放一目了然 轻松下厨不费力</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/10/2/n14607342.htm">节目类金钟舞台亮点 Lulu开场重现经典综艺</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/10/2/n14607342.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
